# aligner

./: .gitignore  app.py  end.docx  get_files.py  pyproject.toml  readme.md
align/handler/: align_mgr.py  aligner.py  audio_cutter.py  prepare_data_whisper.py  segment_cutter.py  srt_analyzer.py  transcribe.py
align/services/: audio_utils.py  create_dataset.py  docx_util.py  logger.py  silence_segment_analyzer.py  statistics.py  utils.py
